[package]
name = "jambox-go-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "stream"] }
regex = "1"
once_cell = "1"
url = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
parking_lot = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
headers = "0.4"
urlencoding = "2"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
r2d2 = "0.8"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
