[package]
name = "jambox-go-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
parking_lot = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5"
notify = "6"
tokio-util = { version = "0.7", features = ["io"] }
